force-app/main/default/objects/HelpFilter__c/HelpFilter__c.object-meta.xml
<CustomObject>
    <description>Groupings of Help Filter Criteria and associated Rules</description>
    <label>Help Filter</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Help Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Filters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>