force-app/main/default/objects/HelpFilter__c/fields/FilteredObject__c.field-meta.xml
<CustomField>
    <fullName>FilteredObject__c</fullName>
    <description>The API name of the object that is to be the subject of this Filter</description>
    <inlineHelpText>The API name of the object that is to be the subject of this Filter</inlineHelpText>
    <label>Filtered Object</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>