force-app/main/default/objects/HelpFilter__c/fields/FilteredObjectIdentifier__c.field-meta.xml
<CustomField>
    <fullName>FilteredObjectIdentifier__c</fullName>
    <description>The identifier (e.g. 3 letter code) of the object that is to be the subject of this Filter</description>
    <inlineHelpText>The identifier (e.g. 3 letter code) of the object that is to be the subject of this Filter</inlineHelpText>
    <label>Filtered Object Identifier</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>