force-app/main/default/objects/HelpFilter__c/fields/FilterIdentifier__c.field-meta.xml
<CustomField>
    <fullName>FilterIdentifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A unique reference with which to tag this Filter</description>
    <inlineHelpText>A unique reference with which to tag this Filter</inlineHelpText>
    <label>Filter Identifier</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>