force-app/main/default/objects/HelpFilter__c/fields/FilterLogic__c.field-meta.xml
<CustomField>
    <fullName>FilterLogic__c</fullName>
    <description>Rules governing the grouping of individual Criteria within a Filter</description>
    <inlineHelpText>Rules governing the grouping of individual Criteria within a Filter</inlineHelpText>
    <label>Filter Logic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>