force-app/main/default/objects/HelpFilter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FilterIdentifier__c</columns>
    <columns>FilteredObject__c</columns>
    <columns>FilteredObjectIdentifier__c</columns>
    <columns>FilterLogic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>